--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@particle-network/connectkit": "^2.0.12",
+    "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.95.4",
     "next": "14.2.5",
     "react": "^18",
