--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@particle-network/connectkit": "^2.0.12",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.95.4",
+    "@types/bs58": "^4.0.4",
+    "bs58": "^6.0.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
